# QUARCS_Process

src/: CMakeLists.txt  led.cpp  led.h  main.cpp  quarcsmonitor.cpp  quarcsmonitor.h  websocketclient.cpp
